test: use Map.of in BrokerStatusHealthIndicatorTest
Replacing ImmutableMap clears the analyzer complaint about pulling Guava through this test helper.